--- a/assets/style.css
+++ b/assets/style.css
@@ -49,16 +49,14 @@ h1 {
 
 header {
     display: flex;
-    flex-flow: row;
-    align-items: center;
-    width: 95vw;
-    max-width: 990px;
+    width: clamp(315px, 95vw, 990px);
     margin: 0 auto;
 }
 
 input {
     height: 60px;
     flex: 70%;
+    flex-shrink: 1;
     padding-left: 30px;
     font-size: 1.2rem;
     border: .7px solid #7be7de;
@@ -208,5 +206,11 @@ button.btn-delete {
 
     .item-text {
         font-size: 1.3rem;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    input {
+        width: 50px;
     }
 }
