--- a/assets/style.css
+++ b/assets/style.css
@@ -31,7 +31,7 @@
 
 * {
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -150,14 +150,13 @@ button.btn-save {
 .item-icon {
     cursor: pointer;
     font-size: 1rem;
-    text-align: center;
 }
 
 button.btn-delete {
     cursor: pointer;
     width: 16px;
     height: 16px;
-    margin-top: .1px;
+    margin: 1px;
     border: none;
     border-radius: 50%;
     background-color: #f24d6e;
@@ -202,10 +201,11 @@ button.btn-delete {
         flex: 1 0 64px;
         width: 64px;
         height: 64px;
+        margin: 3px;
     }
 
     .item-text {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
     }
 }
 
