--- a/assets/style.css
+++ b/assets/style.css
@@ -35,8 +35,11 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    width: clamp(315px, 95vw, 990px);
     overflow-x: hidden;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     text-align: center;
     background-color: #312c2b;
@@ -49,7 +52,7 @@ h1 {
 
 header {
     display: flex;
-    width: clamp(315px, 95vw, 990px);
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -58,7 +61,7 @@ input {
     flex: 70%;
     padding-left: 30px;
     font-size: 1.2rem;
-    border: .7px solid #7be7de;
+    border: .7px solid #8dc26f;
     color: #312c2b;
 }
 
@@ -76,7 +79,7 @@ button.btn-add {
     height: 60px;
     flex: 15%;
     border: none;
-    background-color: #7be7de;
+    background-color: #8dc26f;
     font-size: 1.2rem;
     font-weight: 600;
     transition: .5s ease;
@@ -93,7 +96,7 @@ button.btn-save {
     flex: 15%;
     border: none;
     border-radius: 0 10px 10px 0;
-    background-color: #8dc26f;
+    background-color: #7be7de;
     font-size: 1.2rem;
     font-weight: 600;
     transition: .5s ease;
@@ -108,7 +111,7 @@ button.btn-save {
 .main {
     width: 85vw;
     max-width: 890px;
-    margin: 20px auto;
+    margin: 10px auto;
     list-style: none;
     padding: 0;
 }
@@ -157,8 +160,6 @@ button.btn-save {
     border: none;
     font-size: 1rem;
     color: #f24d6e;
-
-
 }
 
 .item-done {
@@ -190,6 +191,67 @@ button.btn-save {
     animation: refreshItens 1s ease;
 }
 
+.wrapper-switch {
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    gap: 5px;
+    align-self: flex-end;
+}
+
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 30px;
+    height: 16px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    inset: 0;
+    border-radius: 12px;
+    background-color: #a8a8a8;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider::before {
+    position: absolute;
+    content: "";
+    height: 12px;
+    width: 12px;
+    left: 4px;
+    bottom: 2px;
+    border-radius: 50%;
+    background-color: #f24d6e;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.switch input:checked+.slider {
+    background-color: #be7be7;
+}
+
+.switch input:checked+.slider::before {
+    background-color: #7be7de;
+}
+
+.switch input:checked+.slider:before {
+    -webkit-transform: translateX(10px);
+    -ms-transform: translateX(10px);
+    transform: translateX(10px);
+}
+
 @media screen and (max-width: 576px) {
     .item-icon {
         font-size: 2rem;
@@ -202,6 +264,7 @@ button.btn-save {
     .item-text {
         font-size: 1.2rem;
     }
+
 }
 
 @media screen and (max-width: 480px) {
